<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Oxapp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_menu">Menu</string>
    <string name="title_activity_message">Message</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Username</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Username</string>
    <string name="title_activity_people">People</string>
    <string name="title_activity_conversation_list">People</string>
    <string name="title_activity_sign_in">SignIn</string>
    <string name="Sign_in_label">Sign In</string>
    <string name="Sign_in_forgot_password_label">Forgot password?</string>
    <string name="sign_in_btn">Sign In</string>
    <string name="sign_in_register_label">Don\'t have an account? Sign up below with Facebook or Google, or on the web</string>
    <string name="closeDrawer">Open</string>
    <string name="openDrawer">Close</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_profile">Profile</string>
    <string name="type_msg">Type message</string>
    <string name="my_chats">My Chats</string>
    <string name="all_chats">All Chats</string>
    <string name="search">Search</string>
    <string name="to">To:</string>
    <string name="edit">Edit</string>
    <string name="new_chat">New Chat</string>
    <string name="alert_wait">Please wait...</string>
    <string name="err_fields_empty">Please fill all the fields.</string>
    <string name="err_singup">Error occurred while signup:</string>
    <string name="err_login">Error occurred while login:</string>
    <string name="err_users">Error occurred while finding users:</string>
    <string name="alert_loading">Loading...</string>
    <string name="msg_no_user_found">No users found for chat!</string>
    <string name="title_activity_map">Map</string>

    <!-- Start Clear -->
    <string name="title_activity_detail_view">DetailView</string>
    <string name="button_placeholder_text">Button</string>
    <string name="checkbox">CheckBox</string>
    <string name="dashed_area_text">Cool information you might would like to know, that is why it is in this dashed area!</string>
    <string name="show">Show</string>
    <string name="show_dialog_text">Show a Custom Dialog and Loader</string>
    <string name="text_input_hint">text input</string>

    <string name="four">Four</string>
    <string name="three">Three</string>
    <string name="two">Two</string>
    <string name="one">One</string>

    <string name="off">Off</string>
    <string name="on">On</string>

    <string name="like">Like</string>
    <string name="reply">Reply</string>

    <string name="detail_title_placeholder">Profile Title</string>
    <string name="contact_placeholder">Profile Questions</string>
    <string name="social_1_placeholder">4.8</string>
    <string name="social_1_placeholder_nr">15</string>
    <string name="sumary_placeholder">Summary</string>
    <string name="description_placeholder">Description</string>
    <string name="description_tab_1">General</string>
    <string name="description_tab_2">More</string>
    <string name="image_description">Image Description</string>
    <string name="description_title_placeholder">Cool Title Of Some Movie</string>
    <string name="social_2_placeholder">Hotels &amp; Clubs</string>
    <string name="social_3_placeholder">From 2 PM</string>
    <string name="app_title">Bonnie &amp; Clit</string>
    <string name="explore">Explore</string>
    <string name="buy">"  Buy  "</string>
    <string name="hidden_view_text">Click Me</string>
    <string name="list_title_placeholder">Amazing Title</string>
    <string name="list_description_placeholder">Cool Content Description of Item</string>
    <string name="list_number_text_placeholder">Characters</string>
    <string name="list_number_placeholder">27</string>
    <string name="dialog_text_placeholder">With Custom loader (loader is also usable separately)</string>
    <string name="dialog_title_placeholder">Styled Dialog</string>
    <string name="dialog_button_text">" Cancel "</string>
    <string name="placeholder_views">(ADD)</string>
    <string name="views">Favorite</string>
    <string name="followers_placeholder">(ADD)</string>
    <string name="followers">Friend</string>
    <string name="extra_info">delivered</string>
    <string name="coverImage">coverImage</string>
    <string name="add_ambaj_select_source">Select source</string>


    <!-- End Clear -->

    <string name="today">today</string>
    <string name="tomorrow">tomorrow</string>
    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date">
        <xliff:g id="day_of_week">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g>
    </string>
    <string name="profile_photo_text">PHOTOS</string>
    <string name="profile_friend_text">FRIENDS</string>
    <string name="title_activity_profile_photos">ProfilePhotos</string>
    <string name="title_activity_favorite">Favorite</string>

    <!-- FB -->
    <string name="facebook_app_id">344271245710270</string>
    <string name="title_activity_account">Account</string>
    <!-- FB -->

    <string name="noPhotos">No photo yet.</string>
    <string name="noFriends">No friend yet.</string>
    <string name="seen">seen</string>
    <string name="noFavorite">No favorite yet.</string>
    <string name="noConversation">No conversation yet.</string>
    <string name="noMsg">No message yet</string>
    <string name="error_network_timeout">Network Timeout</string>
    <string name="error_auth_failure">Authorisation failure</string>
    <string name="error_server">Server error</string>
    <string name="error_parse">Parse error</string>
    <string name="error_network">Network error</string>

</resources>
