<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:layout_height="wrap_content" >

    <RelativeLayout 
    	android:id="@+id/relativelayout"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" >

		<com.android.volley.toolbox.NetworkImageView
        	android:id="@+id/item_cover_image"
        	android:contentDescription="@string/image_description"
        	android:layout_width="fill_parent"
        	android:layout_height="150dp"
        	android:scaleType="centerCrop"
            android:adjustViewBounds="true" />
    	
    	<RelativeLayout
    	    android:layout_alignBottom="@+id/item_cover_image"
    		android:orientation="horizontal"
    		android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:background="@color/white_transparent" >

    		<TextView
        		android:id="@+id/item_title"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:padding="10dp"
        		android:text="@string/list_title_placeholder"
        		android:fontFamily="sans-serif-light" 
        		android:textSize="@dimen/textsize_medium_large"
        		android:textColor="@color/gray"/>
    		
    		<TextView
    		    android:id="@+id/item_number"
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:layout_toLeftOf="@+id/item_numbertext"
    		    android:layout_centerVertical="true"
    		    android:fontFamily="sans-serif-light"
    		    android:text="@string/list_number_placeholder"
    		    android:textColor="@color/theme_color"
    		    android:textSize="@dimen/textsize_medium_small_static" />

    		<TextView
    		    android:id="@+id/item_numbertext"
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:layout_centerVertical="true"
    		    android:layout_alignParentRight="true"
    		    android:fontFamily="sans-serif-light"
    		    android:padding="5dp"
    		    android:text="@string/list_number_text_placeholder"
    		    android:textColor="@color/gray"
    		    android:textSize="@dimen/textsize_medium_small_static" />
    		
    	</RelativeLayout>
    	
    	   <TextView
    		    android:id="@+id/item_description"
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:fontFamily="sans-serif-light"
			   android:padding="5dp"
    		    android:text="@string/list_description_placeholder"
    		    android:textColor="@android:color/white"
    		    android:background="@color/gray_transparent"
    		    android:textSize="@dimen/textsize_medium_small_static"
			   android:layout_alignParentTop="true"
			   android:layout_alignParentRight="true"
			   android:layout_alignParentEnd="true"
			   android:layout_marginTop="31dp" />

		<com.kalianey.oxapp.utils.UICircularImage
			xmlns:app="http://schemas.android.com/apk/res-auto"
			android:id="@+id/item_avatar_image"
			android:layout_width="60dp"
			android:layout_height="60dp"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_alignTop="@+id/item_description"
			android:contentDescription="avatar"
			android:layout_marginLeft="10dp"
			app:line_color="@android:color/white"
			app:line_color_press="@color/theme_color"
			app:line_width="1dp"
			app:padding="0dp" />

	</RelativeLayout>
	<ImageView
	      android:contentDescription="@string/image_description"
          android:layout_width="match_parent"
          android:layout_height="2dp"
          android:background="@color/theme_color"/>

</LinearLayout>