<?xml version="1.0" encoding="utf-8"?>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bg_layout"
    android:fitsSystemWindows="false"
    android:background="@drawable/detail_background"
    tools:context="com.kalianey.oxapp.views.fragments.ProfileFragment">


        <com.android.volley.toolbox.NetworkImageView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:id="@+id/item_cover_image"
            android:layout_below="@+id/sumary"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:layout_alignParentEnd="false"
            android:contentDescription="@string/coverImage"
            android:layout_alignEnd="@id/statistics"
            android:minHeight="220dp"
            android:minWidth="300dp"
            android:scaleType="fitXY" />

        <com.kalianey.oxapp.utils.UIParallaxScroll
        android:id="@+id/scroller"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:headerView="@+id/layout_top">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:paddingLeft="16dp"
                android:paddingTop="10dp"
                android:paddingRight="16dp"
                android:text="@string/detail_title_placeholder"
                android:textSize="@dimen/textsize_xlarge"
                android:layout_below="@+id/image_view"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/sumary"
                android:layout_below="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:text="@string/sumary_placeholder"
                android:textColor="@color/white_transparent"
                android:textSize="@dimen/textsize_medium_small" />

            <LinearLayout
                android:id="@+id/statistics"
                android:layout_below="@+id/sumary"
                android:background="@color/gray_transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:orientation="vertical" >

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageButtonFriend"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/user"
                        android:background="@android:color/transparent"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:background="@color/gray_transparent"
                    android:orientation="vertical" >

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageButtonFavorite"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/star"
                        android:background="@android:color/transparent"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/informations_container"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:background="@android:color/white"
                android:layout_below="@+id/statistics"
                android:gravity="center"
                android:padding="10dp">

                <com.kalianey.oxapp.utils.UITabs
                    android:id="@+id/toggle"
                    android:layout_gravity="center"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/toggle1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:checked="true"
                        android:text="@string/description_tab_1"
                        style="@style/UITabs" />

                    <RadioButton
                        android:id="@+id/toggle2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="@string/description_tab_2"
                        android:layout_gravity="bottom"
                        style="@style/UITabs" />

                </com.kalianey.oxapp.utils.UITabs>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/profile_photo_text"
                    android:text="@string/profile_photo_text"
                    android:layout_gravity="left"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="20dp" />


                <android.support.v7.widget.RecyclerView
                  android:id="@+id/grid_view"
                  android:layout_width="match_parent"
                  android:layout_height="250dp"
                  app:layoutManager="StaggeredGridLayoutManager"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/profile_friend_text"
                    android:text="@string/profile_friend_text"
                    android:layout_gravity="left"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"/>

                <org.lucasr.twowayview.TwoWayView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/friends_list"
                    style="@style/TwoWayView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="false"
                    tools:context=".MainActivity"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"/>

                <se.emilsjolander.stickylistheaders.StickyListHeadersListView
                    android:id="@+id/questions_list"
                    android:layout_width="match_parent"
                    android:layout_height="500dp"
                    android:visibility="gone" />


            </LinearLayout>

            <com.kalianey.oxapp.utils.UICircularImage
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/image_view"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="5dp"
                app:line_color="@android:color/white"
                app:line_color_press="@color/theme_color"
                app:line_width="1dp"
                app:padding="0dp" />

        </RelativeLayout>

    </com.kalianey.oxapp.utils.UIParallaxScroll>

    <!-- "ActionBar"  -->

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_navigation">

        <FrameLayout
            android:id="@+id/layout_top"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows = "true"
            android:background="@color/bar_color">

            <Button
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@drawable/titlebar_back_selector"
                android:id="@+id/title_bar_left_menu"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/titleBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:fontFamily="sans-serif-light"
                android:ellipsize="marquee"
                android:singleLine="false"
                android:text=""
                android:textSize="@dimen/textsize_large"
                android:textColor="@android:color/white"
                android:layout_gravity="center"/>

        </FrameLayout>

            <LinearLayout
            android:id="@+id/layout_navigation_buttonholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows = "true"
            android:layout_centerHorizontal="true"
            android:gravity="right"
            android:layout_marginTop="30dp">

            <com.kalianey.oxapp.utils.UICircularImage
                android:id="@+id/action1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_conversation"
                android:paddingRight="10dp"
                app:padding="20dp"
                app:line_width="1dp"
                app:line_color="@android:color/white"
                app:line_color_press="@color/theme_color"
                app:background_color="@color/theme_color"/>

        </LinearLayout>

    </RelativeLayout>

    </RelativeLayout>
