<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.kalianey.oxapp.views.fragments.SignInFragment"
    tools:showIn="@layout/activity_sign_in"
    android:background="#010101">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/landingpage"
        android:padding="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sign_in_label"
        android:textSize="50sp"
        android:textColor="@android:color/white"
        android:id="@+id/signInLabel"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signInLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="70dp"
        android:id="@+id/emailContainer">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Email"
            android:id="@+id/emailLabel"
            android:textColor="#ffffff"
            android:textSize="22dp"
            android:paddingRight="15dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailInput"
            android:layout_weight="1"
            android:textColor="#ffffff"
            android:text="demogirl"
            android:gravity="right"
            android:paddingStart="0dp"
            android:phoneNumber="true" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailContainer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="49dp"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Password"
            android:id="@+id/passwordLabel"
            android:textColor="#ffffff"
            android:textSize="22dp"
            android:paddingRight="15dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordInput"
            android:layout_weight="1"
            android:textColor="#ffffff"
            android:text="demogirl"
            android:gravity="right"
            android:paddingStart="0dp"
            android:password="true" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Sign_in_forgot_password_label"
        android:id="@+id/forgotPassword"
        android:layout_below="@+id/linearLayout"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_alignEnd="@+id/linearLayout"
        android:singleLine="true"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_btn"
        android:id="@+id/signInButton"
        android:layout_below="@+id/forgotPassword"
        android:layout_marginTop="33dp"
        android:background="@drawable/button_bg_rounded_corners"
        android:textColor="@color/white"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_alignEnd="@+id/forgotPassword"
        android:layout_alignParentStart="true"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/sign_in_register_label"
        android:id="@+id/register"
        android:textColor="#ffffff"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/signInButton"
        android:layout_centerHorizontal="true"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="center_horizontal"
        android:textSize="11dp"
        android:textIsSelectable="true"
        android:textColorLink="#ffffff"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="By continuing, I agree to the terms&amp;conditions"
        android:id="@+id/termsText"
        android:layout_above="@+id/linearLayout7"
        android:layout_centerHorizontal="true"
        android:paddingBottom="7dp"
        android:textColorLink="#ffffff"
        android:textIsSelectable="true"
        android:textColor="#ffffff"
        android:textStyle="italic"
        android:textSize="11dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:weightSum="1"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="true"
        android:id="@+id/linearLayout7">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.5"
            android:background="#364d8c"
            android:visibility="gone"/>

        <Button
            android:id="@+id/fb_button"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.5"
            android:layout_margin="0dp"
            android:background="#364d8c"
            android:text="Sign in with Facebook"
            android:textColor="#ffffff"
            android:textAllCaps="true"
            android:textSize="12dp" />

        <!--<com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" /-->


        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.5"
            android:background="#f25e5e"
            android:textColor="#ffffff"
            android:textAllCaps="true"
            android:text="Sign in with google"
            android:layout_marginBottom="0dp"
            android:textSize="12dp" />

    </LinearLayout>


</RelativeLayout>
